<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Class Room Management</string>

    <!-- Toast text -->
    <string name="no_internet">No internet connection.</string>
    <string name="google_services_fail">The connection to Google Play Services has failed.</string>
    <string name="google_services_suspended">The connection to Google Play Services has been interrupted.</string>
    <string name="no_gps_permission">No locations permissions.</string>
    <string name="location_conf_request">Error triying to solve the location settings.</string>
    <string name="location_no_settings_change">Unable to meet required location settings.</string>
    <string name="location_disabled">Location is disabled or does not have location permissions.</string>
    <string name="location_settings_change">The user has not made the necessary configuration changes.</string>
    <string name="no_camera_permissions">No camera permissions.</string>
    <string name="no_ext_write_permissions">You do not have permissions to write to external storage.</string>
    <string name="no_vibrate_permissions">You do not have permission to access the vibration.</string>

    <!-- Button text -->
    <string name="loading">Loading</string>

    <!-- TextViews Text-->

    <!-- Database Text-->
    <string name="connection_error">Connection error.</string>
    <string name="name_text">Name</string>
    <string name="user_without_name">Not name user</string>
    <string name="surname_text">Surname</string>
    <string name="role_text">Role</string>
    <string name="register_button">Save</string>
    <string name="no_name_registered">First name not entered</string>
    <string name="no_surname_registered">Surname not entered</string>
    <string name="confirm_registry">Confirm User Registry</string>
    <string name="confirmation_message">Please confirm that the following data is correct:\n- Name: %1$s \n- Surname: %2$s \n- Email: %3$s \n- Role: %4$s</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <!-- Marker's popup text -->
    <string name="popup_address">Address:</string>
    <string name="popup_phone">Phone:</string>
    <string name="popup_web">Web:</string>
    <string name="popup_your_location">You are here.</string>

    <!--Menu labels-->
    <string name="menu_gps_location">Gps</string>
    <string name="menu_indoor_location">Indoor</string>
    <string name="menu_update_profile">Profile</string>
    <string name="menu_exit">Exit</string>
    <string name="lateral_menu_header">Lateral menu header</string>
    <string name="update_confirmation">Your profile has been updated correctly.</string>
    <string name="email_text">Email</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="menu_user_registration">Sign Up</string>

    <!--Vuforia -->
    <string name="INIT_ERROR">Error</string>
    <string name="INIT_ERROR_DEVICE_NOT_SUPPORTED">Failed to initialize Vuforia. This device is not supported.</string>
    <string name="INIT_ERROR_NO_CAMERA_ACCESS">Failed to initialize Vuforia. Camera not accessible</string>
    <string name="INIT_LICENSE_ERROR_MISSING_KEY">Vuforia App key is missing. Please get a valid key, by logging into your account at developer.vuforia.com and creating a new project.</string>
    <string name="INIT_LICENSE_ERROR_INVALID_KEY">Invalid Key used. Please make sure you are using a valid Vuforia App Key.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_TRANSIENT">Unable to contact server. Please try again later.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_PERMANENT">No network available. Please make sure you are connected to the Internet.</string>
    <string name="INIT_LICENSE_ERROR_CANCELED_KEY">This app license key has been canceled and may no longer be used. Please get a new license key.</string>
    <string name="INIT_LICENSE_ERROR_PRODUCT_TYPE_MISMATCH">Vuforia App key is not valid for this product. Please get a valid key, by logging into your account at developer.vuforia.com and choosing the right product type during project creation.</string>
    <string name="INIT_LICENSE_ERROR_UNKNOWN_ERROR">Failed to initialize Vuforia.</string>
    <string name="button_OK">OK</string>

    <!--Days of week-->
    <string name="MONDAY">M</string>
    <string name="TUESDAY">T</string>
    <string name="WEDNESDAY">W</string>
    <string name="THURSDAY">TH</string>
    <string name="FRIDAY">F</string>
    <string name="SATURDAY">SAT</string>
    <string name="SUNDAY">S</string>

</resources>
