<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/GpsLocation"
            android:icon="@drawable/ic_menu_gps"
            android:title="@string/menu_gps_location"/>
        <item
            android:id="@+id/IndoorLocation"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_indoor_location"/>
        <item
            android:id="@+id/UpdateProfile"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/menu_update_profile"/>
        <item
            android:id="@+id/exit"
            android:icon="@drawable/ic_menu_exit"
            android:title="@string/menu_exit"/>
    </group>
</menu>